@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Alex Blewitt <alex.blewitt@gmail.com> - replace new Boolean with Boolean.valueOf - https://bugs.eclipse.org/470344
  *******************************************************************************/
 package org.eclipse.compare;
 
@@ -70,7 +71,7 @@ public class Splitter extends SashForm {
 		boolean wasEmpty= isEmpty();
 				
 		child.setVisible(visible);
-		child.setData(VISIBILITY, new Boolean(visible));
+		child.setData(VISIBILITY, Boolean.valueOf(visible));
 		
 		if (wasEmpty != isEmpty()) {
 			// recursively walk up
