@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2011 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Alex Blewitt <alex.blewitt@gmail.com> - replace new Boolean with Boolean.valueOf - https://bugs.eclipse.org/470344
  *******************************************************************************/
 package org.eclipse.compare.internal;
 
@@ -48,7 +49,7 @@ public class ChangePropertyAction extends Action implements IPropertyChangeListe
 		boolean b= !Utilities.getBoolean(fCompareConfiguration, fPropertyKey, false);
 		setChecked(b);
 		if (fCompareConfiguration != null)
-			fCompareConfiguration.setProperty(fPropertyKey, new Boolean(b));
+			fCompareConfiguration.setProperty(fPropertyKey, Boolean.valueOf(b));
 	}
 
 	public void setChecked(boolean state) {
